--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+/* @import '~@angular/material/prebuilt-themes/indigo-pink.css'; */
 
 /* Add application styles & imports to this file! */
 html, body { height: 100%; }
