Commit image url

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* @import '~@angular/material/prebuilt-themes/indigo-pink.css'; */
 
 /* Add application styles & imports to this file! */
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
