--- a/src/app/layouts/full/sidebar/sidebar.component.html
+++ b/src/app/layouts/full/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
 <!-- ============================================================== -->
  <div class="user-profile" style="background: url(./assets/images/background/user-info.jpg) no-repeat;">
     <!-- User profile image -->
-    <div class="profile-img"> <img src="./assets/images/users/profile.png" alt="user"> </div>
+    <div class="profile-img"> <img src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/users/profile.png" alt="user"> </div>
     <!-- User profile text-->
     <!-- ============================================================== -->
     <!-- Profile - style you can find in header.scss -->
