--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -74,10 +74,10 @@
     <!-- Card column -->
     <div fxFlex.gt-lg="25" fxFlex.gt-md="40" fxFlex.gt-xs="100" fxFlex="100">
         <mat-card class="oh text-center little-profile">
-            <img mat-card-image src="./assets/images/background/profile-bg.jpg" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/background/profile-bg.jpg" alt="Photo of a Shiba Inu">
             <mat-card-content>
                 <div class="pro-img">
-                    <img src="./assets/images/users/4.jpg" width="100" alt="user" class="img-circle">
+                    <img src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/users/4.jpg" width="100" alt="user" class="img-circle">
                 </div>
                 <h3 class="m-b-0">Angela Dominic</h3>
                 <h6 class="m-t-0 ">Web Designer &amp; Developer</h6>
@@ -111,7 +111,7 @@
                 <div class="message-widget contact-widget">
                     <!-- Message -->
                     <a href="#">
-                        <div class="user-img"> <img src="./assets/images/users/1.jpg" alt="user" class="img-circle">
+                        <div class="user-img"> <img src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/users/1.jpg" alt="user" class="img-circle">
                             <span class="profile-status online pull-right"></span> </div>
                         <div class="mail-contnet">
                             <h5>Pavan kumar</h5> <span class="mail-desc">info@wrappixel.com</span>
@@ -119,7 +119,7 @@
                     </a>
                     <!-- Message -->
                     <a href="#">
-                        <div class="user-img"> <img src="./assets/images/users/2.jpg" alt="user" class="img-circle">
+                        <div class="user-img"> <img src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/users/2.jpg" alt="user" class="img-circle">
                             <span class="profile-status busy pull-right"></span> </div>
                         <div class="mail-contnet">
                             <h5>Sonu Nigam</h5> <span class="mail-desc">pamela1987@gmail.com</span>
@@ -135,7 +135,7 @@
                     </a>
                     <!-- Message -->
                     <a href="#">
-                        <div class="user-img"> <img src="./assets/images/users/4.jpg" alt="user" class="img-circle">
+                        <div class="user-img"> <img src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/users/4.jpg" alt="user" class="img-circle">
                             <span class="profile-status offline pull-right"></span> </div>
                         <div class="mail-contnet">
                             <h5>Pavan kumar</h5> <span class="mail-desc">kat@gmail.com</span>
@@ -143,7 +143,7 @@
                     </a>
                     <!-- Message -->
                     <a href="#">
-                        <div class="user-img"> <img src="./assets/images/users/5.jpg" alt="user" class="img-circle">
+                        <div class="user-img"> <img src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/users/5.jpg" alt="user" class="img-circle">
                             <span class="profile-status offline pull-right"></span> </div>
                         <div class="mail-contnet">
                             <h5>Andrew</h5> <span class="mail-desc">and@gmail.com</span>
@@ -151,7 +151,7 @@
                     </a>
                     <!-- Message -->
                     <a href="#">
-                        <div class="user-img"> <img src="./assets/images/users/6.jpg" alt="user" class="img-circle">
+                        <div class="user-img"> <img src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/users/6.jpg" alt="user" class="img-circle">
                             <span class="profile-status offline pull-right"></span> </div>
                         <div class="mail-contnet">
                             <h5>Jonathan Jones</h5> <span class="mail-desc">jj@gmail.com</span>
@@ -171,7 +171,7 @@
                     <mat-card-content>
                         <div class="d-flex no-blcok">
                             <div class="m-r-20">
-                                <img class="img-circle" width="50" src="./assets/images/users/1.jpg" alt="Image"> </div>
+                                <img class="img-circle" width="50" src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/users/1.jpg" alt="Image"> </div>
                             <div class="p-b-20 b-b m-b-30">
                                 <h4 class="m-0">Nirav joshi
                                     <small class="text-muted">(5 minute ago)</small>
@@ -180,7 +180,7 @@
                                     nec odio. Praesent libero.</p>
                                 <div fxLayout="row wrap">
                                     <div fxFlex.gt-sm="20" fxFlex="100">
-                                        <img class="img-responsive rounded" src="./assets/images/big/img2.jpg"
+                                        <img class="img-responsive rounded" src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/big/img2.jpg"
                                             alt="Image">
                                     </div>
                                 </div>
@@ -188,7 +188,7 @@
                         </div>
                         <div class="d-flex no-blcok">
                             <div class="m-r-20">
-                                <img class="img-circle" width="50" src="./assets/images/users/2.jpg" alt="Image"> </div>
+                                <img class="img-circle" width="50" src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/users/2.jpg" alt="Image"> </div>
                             <div class="p-b-20 b-b m-b-30">
                                 <h4 class="m-0">Sunil joshi
                                     <small class="text-muted">(3 minute ago)</small>
@@ -200,7 +200,7 @@
                         </div>
                         <div class="d-flex no-blcok">
                             <div class="m-r-20">
-                                <img class="img-circle" width="50" src="./assets/images/users/3.jpg" alt="Image"> </div>
+                                <img class="img-circle" width="50" src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/users/3.jpg" alt="Image"> </div>
                             <div class="p-b-20 b-b m-b-30">
                                 <h4 class="m-0">Vishal Bhatt
                                     <small class="text-muted">(1 minute ago)</small>
@@ -209,7 +209,7 @@
                                     nec odio. Praesent libero.</p>
                                 <div fxLayout="row wrap">
                                     <div fxFlex.gt-sm="20" fxFlex="100">
-                                        <img class="img-responsive rounded" src="./assets/images/big/img1.jpg"
+                                        <img class="img-responsive rounded" src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/big/img1.jpg"
                                             alt="Image">
                                     </div>
                                 </div>
@@ -217,7 +217,7 @@
                         </div>
                         <div class="d-flex no-blcok">
                             <div class="m-r-20">
-                                <img class="img-circle" width="50" src="assets/images/users/4.jpg" alt="Image"> </div>
+                                <img class="img-circle" width="50" src="https://cdn.jsdelivr.net/gh/niteshrupesh4/demo-angular-test@master/src/assets/images/users/4.jpg" alt="Image"> </div>
                             <div class="p-b-20 b-b m-b-30">
                                 <h4 class="m-0">Dhiren Adesara
                                     <small class="text-muted">(1 minute ago)</small>
